# weather-predictor

./: LICENSE  README.md
forecast-service/: .gitignore  Dockerfile  pyproject.toml  test_input.json
forecast-service/src/: api.py  handler.py  schemas.py
forecast-service/src/forecast/: engine.py  extract.py  models.py
trading-bot/: .gitignore  pyproject.toml
trading-bot/config/: calibration.yaml  cities.yaml  settings.yaml
trading-bot/data/bias_models/: austin_DJF.json  austin_JJA.json  austin_MAM.json  austin_SON.json  chicago_DJF.json  chicago_JJA.json  chicago_MAM.json  chicago_SON.json  los angeles_DJF.json  los angeles_JJA.json  los angeles_MAM.json  los angeles_SON.json  miami_DJF.json  miami_JJA.json  miami_MAM.json  miami_SON.json  new york_DJF.json  new york_JJA.json  new york_MAM.json  new york_SON.json
trading-bot/data/calibration_models/: austin_platt.json  chicago_platt.json  global_platt.json  miami_platt.json  new_york_platt.json
trading-bot/data/hindcasts/: kaus_hindcasts.csv  klax_hindcasts.csv  kmia_hindcasts.csv  knyc_hindcasts.csv  kord_hindcasts.csv
trading-bot/data/nws_history/: kaus_history.csv  klax_history.csv  kmia_history.csv  knyc_history.csv  kord_history.csv
trading-bot/data/sweep_results/: kaus_sweep.csv  klax_sweep.csv  kmia_sweep.csv  knyc_sweep.csv  kord_sweep.csv
trading-bot/scripts/: export_hindcasts.py  fetch_nws_history.py  sweep_ensemble_params.py  train_bias_models.py  train_calibration.py
trading-bot/src/: bot.py  discord_bot.py  forecast_client.py  nws.py  settlement.py
trading-bot/src/data/: db.py  (+1 more)
(+15 files in other folders)
